#83 Initial version of tpp bank search api

--- a/opba-embedded-starter/src/main/resources/static/index.html
+++ b/opba-embedded-starter/src/main/resources/static/index.html
@@ -7,6 +7,7 @@ TPP Api Server
 We currently provide these two APIs:
 
 <ul>
-<li><a href="swagger-ui/index.html?url=/banking_api_ais.yml">Banking API</a></li>
-<li><a href="swagger-ui/index.html?url=/consent_api.yml">Consent API</a></li>
+<li><a href="swagger-ui/index.html?url=/tpp_bank_search_api.yml">Tpp Bank Search API</a></li>
+<li><a href="swagger-ui/index.html?url=/banking_api_ais.yml">AIS Banking API</a></li>
+<li><a href="swagger-ui/index.html?url=/consent_api.yml">Consent Autorization API</a></li>
 </ul>
