Adding details todocumentation

--- a/fintech-examples/fintech-server/src/main/resources/static/index.html
+++ b/fintech-examples/fintech-server/src/main/resources/static/index.html
@@ -4,8 +4,6 @@ FinTech Api Server
 
 <h1>FinTech API Server</h1>
 
-Provided APIs
-
 <ul>
-<li><a href="swagger-ui/index.html?url=/fintech_api.yml">All APIs</a></li>
+<li><a href="swagger-ui/index.html?url=/fintech_api.yml">Provided APIs</a></li>
 </ul>
