--- a/opba-embedded-starter/src/main/resources/static/index.html
+++ b/opba-embedded-starter/src/main/resources/static/index.html
@@ -4,11 +4,11 @@ TPP Api Server
 
 <h1>TPP Banking API Server</h1>
 
-We currently provide these two APIs:
+We currently provide following APIs:
 
 <ul>
 <li><a href="swagger-ui/index.html?url=/tpp_bank_search_api.yml">Tpp Bank Search API</a></li>
-<li><a href="swagger-ui/index.html?url=/banking_api_ais.yml">AIS Banking API</a></li>
-<li><a href="swagger-ui/index.html?url=/consent_api.yml">Consent Autorization API</a></li>
+<li><a href="swagger-ui/index.html?url=/banking_api_ais.yml">Tpp AIS Banking API</a></li>
+<li><a href="swagger-ui/index.html?url=/consent_api.yml">Tpp Consent Autorization API</a></li>
 <li><a href="swagger-ui/index.html?url=/tpp_token_api.yml">Tpp Token API</a></li>
 </ul>
