Rename API. Generalise APIs with common elements
#83

--- a/opba-embedded-starter/src/main/resources/static/index.html
+++ b/opba-embedded-starter/src/main/resources/static/index.html
@@ -1,14 +1,19 @@
 <title>
-TPP Api Server
+Open Banking Gateway Server
 </title>
 
-<h1>TPP Banking API Server</h1>
+<h1>Open Banking Gateway Server</h1>
 
 We currently provide following APIs:
 
+<h2>TPP Banking API</h2>
 <ul>
-<li><a href="swagger-ui/index.html?url=/tpp_bank_search_api.yml">Tpp Bank Search API</a></li>
-<li><a href="swagger-ui/index.html?url=/banking_api_ais.yml">Tpp AIS Banking API</a></li>
+<li><a href="swagger-ui/index.html?url=/tpp_banking_api_bank_search.yml">Tpp Bank Search API</a></li>
+<li><a href="swagger-ui/index.html?url=/tpp_banking_api_ais.yml">Tpp AIS Banking API</a></li>
+<li><a href="swagger-ui/index.html?url=/tpp_banking_api_token.yml">Tpp Token API</a></li>
+</ul>
+
+<h2>TPP Consent Authorisation API</h2>
+<ul>
 <li><a href="swagger-ui/index.html?url=/consent_api.yml">Tpp Consent Autorization API</a></li>
-<li><a href="swagger-ui/index.html?url=/tpp_token_api.yml">Tpp Token API</a></li>
 </ul>
